--- a/Learning/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
+++ b/Learning/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Allow Notebook to Import from Comp_Chem_Package\n",
@@ -62,12 +58,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b4d6d76d155470c90da55eddbad4c32",
+       "model_id": "d94f48a252d84ad0a55fcdd618219b5e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -241,26 +239,14 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e34f655d42d04eba8c59d0c1bca43fdd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Label(value='Computing RKR Surface'), FloatProgress(value=-2169.78700338, max=0.0, min=-2169.78…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5568e335e4f148adae0eaa52e9109ec0",
+       "model_id": "04edc50f6a6b4f679c18bcac58c990a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -273,7 +259,7 @@
     }
    ],
    "source": [
-    "diatomicSymbol = widgets.Text(value = \"CO\")\n",
+    "diatomicSymbol = widgets.Dropdown(value = \"CO\", options = [\"CO\", \"NO\", \"H2\", \"Cl2\"])\n",
     "\n",
     "diatomic = widgets.HBox([widgets.Label(\"Diatomic Symbol\"), diatomicSymbol])\n",
     "calculate = startButton = widgets.ToggleButton(\n",
@@ -293,9 +279,10 @@
     "    info.value = \"Calculating solution for \" + diatomicSymbol.value + \".\" \n",
     "    \n",
     "    #calculate solution for anharmonic system\n",
-    "    basis = basisSet(dc, how, size = 4)\n",
-    "    anharmonicPES = morsePotential(dc).fit(rkr(dc).compute())\n",
-    "    sol = schrod(HOperator(basis, anharmonicPES), basis, pes = anharmonicPES)\n",
+    "    basis = basisSet(dc, how, size = 5)\n",
+    "   # anharmonicPES = morsePotential(dc).fit(rkr(dc).compute())\n",
+    "    sol = schrod()\n",
+    "    sol.load(diatomicSymbol.value, \"Harmonic Oscillator\", 5, \"Morse Potential\", \"RKR\")\n",
     "        \n",
     "    pes =  howPotential(dc)\n",
     "    sol.graphTitle = basis.diatomicConstants[\"name\"] + \" Harmonic Oscilator Schrödinger Solution\"\n",
