--- a/Learning/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
+++ b/Learning/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
@@ -59,13 +59,16 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e64a477c896a4c16bab1fdba39fa2e7c",
+       "model_id": "b0d3530093804614ac41b96fe7f12575",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,36 +78,68 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.999885, 0.000115, 0]\n",
+      "[1.00782503223, 2.01410177812, 3.0160492779]\n",
+      "[1.00782503223]\n",
+      "[0.99757, 0.00038, 0.00205]\n",
+      "[15.99491461957, 16.9991317565, 17.99915961286]\n",
+      "[1.00782503223, 15.99491461957]\n"
+     ]
     }
    ],
    "source": [
     "from diatomicConstants import buildDiatomicConstants\n",
-    "diatomicSymbol = widgets.Text(value = \"CO\")\n",
+    "diatomicSymbol = widgets.Dropdown(\n",
+    "    options = [\"Cl2\", \"CO\", \"HCl\", \"HF\", \"O2\", \"OH\", \"HF\", \"N2\", \"NO\"],\n",
+    "    description = \"Diatomic\", \n",
+    "    value = \"OH\"\n",
+    ")\n",
+    "parameterOptions = [\"Normal\", \"Times 2\", \"Divide 2\"]\n",
     "u = widgets.Dropdown(\n",
-    "    options = [\"Normal\", \"Times 2\", \"Divide 2\"], \n",
+    "    options = parameterOptions, \n",
     "    description = \"μ\", \n",
     "    value = \"Normal\"\n",
     ")\n",
     "w = widgets.Dropdown(\n",
-    "    options = [\"Normal\", \"Times 2\", \"Divide 2\"], \n",
+    "    options = parameterOptions, \n",
     "    description = \"ω\", \n",
     "    value = \"Normal\"\n",
     ")\n",
-    "diatomic = widgets.HBox([widgets.Label(\"Diatomic Symbol\"), diatomicSymbol, u, w])\n",
+    "comparison = widgets.Dropdown(\n",
+    "    options = [\"Harmonic\", \"Anharmonic\"],\n",
+    "    description = \"Comparison\", \n",
+    "    value = \"Harmonic\"\n",
+    ")\n",
+    "diatomic = widgets.HBox([widgets.Label(\"Diatomic Symbol\"), diatomicSymbol, comparison, u, w])\n",
+    "\n",
     "calculate = startButton = widgets.ToggleButton(\n",
     "    value = False, \n",
     "    description = \"Update Solution\",\n",
     "    button_style = \"info\"\n",
     ")\n",
+    "\n",
     "info = widgets.HTML(\"\")\n",
     "graph = widgets.VBox()\n",
     "out = widgets.Output()\n",
+    "    \n",
+    "def inform(value):\n",
+    "    info.value = value\n",
+    "    out.clear_output()\n",
+    "    with out: \n",
+    "        display(info)\n",
     "\n",
-    "def buildSolution(dc, name = \"\"):\n",
+    "#-------------------------------------------------------------------------------------\n",
+    "\n",
+    "def buildSolution(dc, name = \"\", size = 20):\n",
     "    pes =  howPotential(dc)\n",
-    "    basis = basisSet(dc, how)\n",
+    "    basis = basisSet(dc, how, size)\n",
     "    sol = schrod()\n",
-    "    sol.graphTitle = basis.diatomicConstants[\"name\"] + \" Harmonic Oscilator Schrödinger Solution\"\n",
+    "    sol.graphTitle = basis.diatomicConstants[\"name\"] + \" Harmonic Oscillator Schrödinger Solution\"\n",
     "    for index, bf in enumerate(basis):\n",
     "        #eigen value analytical equation derived from hyperphysics website for harmonic osciallator\n",
     "        \n",
@@ -114,7 +149,6 @@
     "        wf2 = wavefunction(evec, ev, basis, index, squared=True).scale(500)\n",
     "        wf.setGraphVariables(yEqualsCutoff = ev)\n",
     "        wf2.setGraphVariables(yEqualsCutoff = ev)\n",
-    "        \n",
     "        \n",
     "        sol.addGraphableObject(wf)\n",
     "        sol.addGraphableObject(wf2)\n",
@@ -134,23 +168,31 @@
     "    if(dc == False):\n",
     "        info.value = \"'\" + diatomicSymbol.value + \"' is not a valid diatomic molecule.\" \n",
     "        return\n",
-    "    info.value = \"Calculating solution for \" + diatomicSymbol.value + \".\" \n",
+    "    info.value = \"Calculating solution for \" + diatomicSymbol.value + \"...\" \n",
     "    \n",
     "    sol = buildSolution(dc)\n",
     "    name = \"\"\n",
     "    #update diatomic constants\n",
-    "    for widget, index in [(u, \"u\"), (w, \"w\")]:\n",
-    "        if(widget.value == \"Times 2\"):\n",
-    "            dc[index] *= 2\n",
-    "            name += \", \" + widget.description + \" \" + widget.value\n",
-    "        elif(widget.value == \"Divide 2\"):\n",
-    "            dc[index] /= 2\n",
-    "            name += \", \" + widget.description + \" \" + widget.value\n",
+    "    if(comparison.value == \"Harmonic\"):\n",
+    "        for widget, index in [(u, \"u\"), (w, \"w\")]:\n",
+    "            if(widget.value == \"Times 2\"):\n",
+    "                dc[index] *= 2\n",
+    "                name += \", \" + widget.description + \" \" + widget.value\n",
+    "            elif(widget.value == \"Divide 2\"):\n",
+    "                dc[index] /= 2\n",
+    "                name += \", \" + widget.description + \" \" + widget.value\n",
+    "                \n",
+    "        if(name != \"\"):\n",
+    "            sol.combineSolutions(buildSolution(dc, name), name)\n",
+    "    else: \n",
+    "        sol2 = schrod()\n",
+    "        sol2.load(dc[\"name\"], \"Harmonic Oscillator\", 100, \"Morse Potential\", \"RKR\", scaleFactor = 500)\n",
+    "        sol.combineSolutions(sol2, \" Anharmonic\")\n",
     "    \n",
-    "    if(name != \"\"):\n",
-    "        sol.combineSolutions(buildSolution(dc, name), name)\n",
-    "\n",
+    "    endPoints = [dc[\"re\"] - 1.2, dc[\"re\"] + 1.2]\n",
+    "    sol.start, sol.end = endPoints[0], endPoints[1]\n",
     "    graph.children = ( (sol.graph(getGraph = True), diatomic, calculate, info) )\n",
+    "    graph.children[0].children[0].update_xaxes(range=endPoints).update_yaxes(range=[0,sol.graphableObjects[1].energy + 5000])\n",
     "    \n",
     "    out.clear_output()\n",
     "    with out: \n",
@@ -162,8 +204,9 @@
     "\n",
     "calculate.observe(updateWrapper, names=\"value\")\n",
     "\n",
-    "howPESUpdate()  \n",
-    "display(out)"
+    "display(out)\n",
+    "inform(\"Building Graph...\")\n",
+    "howPESUpdate()  "
    ]
   },
   {
@@ -220,7 +263,7 @@
    "metadata": {},
    "source": [
     "<br>\n",
-    "The following questions will revolve around comparing a model of a diatomic molecule using a harmonic potential energy surface, and an anharmonic poetential energy surface. Specifically, the harmonic potential will be the haromonic oscillator presented above, while the anharmonic potential will be the anharmonic morse potential. "
+    "The following questions will revolve around comparing a model of a diatomic molecule using a harmonic potential energy surface, and an anharmonic poetential energy surface. Specifically, the harmonic potential will be the haromonic oscillator presented above, while the anharmonic potential will be the anharmonic morse potential. On the graph above, change the Comnparison mode from \"Harmonic\" to \"Anharmonic\". "
    ]
   },
   {
@@ -235,96 +278,6 @@
     "\n",
     "18. Which potential (harmonic or anharmonic) best represents the actual behavior of diatomic molecules and why? "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a67c4dca373444fb8a3b9d168381d74",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "diatomicSymbol = widgets.Dropdown(value = \"CO\", options = [\"CO\", \"NO\", \"H2\", \"Cl2\"])\n",
-    "\n",
-    "diatomic = widgets.HBox([widgets.Label(\"Diatomic Symbol\"), diatomicSymbol])\n",
-    "calculate = startButton = widgets.ToggleButton(\n",
-    "    value = False, \n",
-    "    description = \"Update Solution\",\n",
-    "    button_style = \"info\"\n",
-    ")\n",
-    "info = widgets.HTML(\"\")\n",
-    "graph = widgets.VBox()\n",
-    "out2 = widgets.Output()\n",
-    "\n",
-    "def howPESUpdate():\n",
-    "    dc = getDiatomicConstants(diatomicSymbol.value)\n",
-    "    if(dc == False):\n",
-    "        info.value = \"'\" + diatomicSymbol.value + \"' is not a valid diatomic molecule.\" \n",
-    "        return\n",
-    "    info.value = \"Calculating solution for \" + diatomicSymbol.value + \".\" \n",
-    "    \n",
-    "    #calculate solution for anharmonic system\n",
-    "    basis = basisSet(dc, how, size = 15)\n",
-    "   # anharmonicPES = morsePotential(dc).fit(rkr(dc).compute())\n",
-    "    sol = schrod()\n",
-    "    sol.load(diatomicSymbol.value, \"Harmonic Oscillator\", 50, \"Morse Potential\", \"RKR\")\n",
-    "        \n",
-    "    pes =  howPotential(dc)\n",
-    "    sol.graphTitle = basis.diatomicConstants[\"name\"] + \" Harmonic Oscilator Schrödinger Solution\"\n",
-    "    for index, bf in enumerate(basis):\n",
-    "        #eigen value analytical equation derived from hyperphysics website for harmonic osciallator\n",
-    "        \n",
-    "        ev = (index + 0.5) * dc[\"w\"]\n",
-    "        evec = [1 if i == index else 0 for i in range(basis.size)]\n",
-    "        wf = wavefunction(evec, ev, basis, index).scale(sol.scaleFactor)\n",
-    "        wf2 = wavefunction(evec, ev, basis, index, squared=True).scale(sol.scaleFactor)\n",
-    "        wf.setGraphVariables(yEqualsCutoff = ev, graphTitle = wf.graphTitle + \" Harmonic\")\n",
-    "        wf2.setGraphVariables(yEqualsCutoff = ev, graphTitle = wf2.graphTitle + \" Harmonic\")\n",
-    "        \n",
-    "        sol.addGraphableObject(wf)\n",
-    "        sol.addGraphableObject(wf2)\n",
-    "        \n",
-    "    sol.addGraphableObject(pes)\n",
-    "    sol.pesLocations.append(len(sol.graphableObjects) - 1)\n",
-    "    sol.start = dc[\"re\"] - 0.4\n",
-    "    sol.end = dc[\"re\"] + 0.4\n",
-    " \n",
-    "    graph.children = ( (sol.graph(getGraph = True), diatomic, calculate, info) )\n",
-    "    info.value = \"Calculation Completed\"\n",
-    "    \n",
-    "    out2.clear_output()\n",
-    "    with out2: \n",
-    "        display(graph)\n",
-    "\n",
-    "updateWrapper = lambda change :  howPESUpdate()\n",
-    "calculate.observe(updateWrapper, names=\"value\")\n",
-    "\n",
-    "howPESUpdate()  \n",
-    "display(out2)\n",
-    "#basis of 100, precalculate and save for later"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
