Minor Cosmetic Changes
-Hides Code in HOW Lab
-Adjusts Wavefunction Scaling for HOW Lab

--- a/Learning/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
+++ b/Learning/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "#Allow Notebook to Import from Comp_Chem_Package\n",
@@ -68,7 +73,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0d3530093804614ac41b96fe7f12575",
+       "model_id": "a77f894cbfbd45519195a570c7b91079",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,22 +83,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.999885, 0.000115, 0]\n",
-      "[1.00782503223, 2.01410177812, 3.0160492779]\n",
-      "[1.00782503223]\n",
-      "[0.99757, 0.00038, 0.00205]\n",
-      "[15.99491461957, 16.9991317565, 17.99915961286]\n",
-      "[1.00782503223, 15.99491461957]\n"
-     ]
     }
    ],
    "source": [
     "from diatomicConstants import buildDiatomicConstants\n",
+    "\n",
+    "scaleFactor = 570\n",
+    "\n",
     "diatomicSymbol = widgets.Dropdown(\n",
     "    options = [\"Cl2\", \"CO\", \"HCl\", \"HF\", \"O2\", \"OH\", \"HF\", \"N2\", \"NO\"],\n",
     "    description = \"Diatomic\", \n",
@@ -145,8 +141,8 @@
     "        \n",
     "        ev = (index + 0.5) * dc[\"w\"]\n",
     "        evec = [1 if i == index else 0 for i in range(basis.size)]\n",
-    "        wf = wavefunction(evec, ev, basis, index).scale(500)\n",
-    "        wf2 = wavefunction(evec, ev, basis, index, squared=True).scale(500)\n",
+    "        wf = wavefunction(evec, ev, basis, index).scale(scaleFactor)\n",
+    "        wf2 = wavefunction(evec, ev, basis, index, squared=True).scale(scaleFactor)\n",
     "        wf.setGraphVariables(yEqualsCutoff = ev)\n",
     "        wf2.setGraphVariables(yEqualsCutoff = ev)\n",
     "        \n",
@@ -154,7 +150,7 @@
     "        sol.addGraphableObject(wf2)\n",
     "        \n",
     "    sol.addGraphableObject(pes)\n",
-    "    sol.scaleFactor = 500\n",
+    "    sol.scaleFactor = scaleFactor\n",
     "    sol.start = dc[\"re\"] - 0.4\n",
     "    sol.end = dc[\"re\"] + 0.4\n",
     "    sol.pesLocations.append(len(sol.graphableObjects) - 1)\n",
@@ -186,7 +182,7 @@
     "            sol.combineSolutions(buildSolution(dc, name), name)\n",
     "    else: \n",
     "        sol2 = schrod()\n",
-    "        sol2.load(dc[\"name\"], \"Harmonic Oscillator\", 100, \"Morse Potential\", \"RKR\", scaleFactor = 500)\n",
+    "        sol2.load(dc[\"name\"], \"Harmonic Oscillator\", 100, \"Morse Potential\", \"RKR\", scaleFactor = scaleFactor)\n",
     "        sol.combineSolutions(sol2, \" Anharmonic\")\n",
     "    \n",
     "    endPoints = [dc[\"re\"] - 1.2, dc[\"re\"] + 1.2]\n",
