--- a/Learning/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
+++ b/Learning/Basis Sets/Harmonic Oscillator Wavefunction.ipynb
@@ -4,9 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -64,16 +61,13 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a77f894cbfbd45519195a570c7b91079",
+       "model_id": "767fa41874254fd4abbfd8fc2f2dc902",
        "version_major": 2,
        "version_minor": 0
       },
@@ -93,7 +87,7 @@
     "diatomicSymbol = widgets.Dropdown(\n",
     "    options = [\"Cl2\", \"CO\", \"HCl\", \"HF\", \"O2\", \"OH\", \"HF\", \"N2\", \"NO\"],\n",
     "    description = \"Diatomic\", \n",
-    "    value = \"OH\"\n",
+    "    value = \"Cl2\"\n",
     ")\n",
     "parameterOptions = [\"Normal\", \"Times 2\", \"Divide 2\"]\n",
     "u = widgets.Dropdown(\n",
@@ -131,8 +125,9 @@
     "\n",
     "#-------------------------------------------------------------------------------------\n",
     "\n",
-    "def buildSolution(dc, name = \"\", size = 20):\n",
+    "def buildSolution(dc, name = \"\", size = 25, color = None):\n",
     "    pes =  howPotential(dc)\n",
+    "    pes.color = color\n",
     "    basis = basisSet(dc, how, size)\n",
     "    sol = schrod()\n",
     "    sol.graphTitle = basis.diatomicConstants[\"name\"] + \" Harmonic Oscillator Schrödinger Solution\"\n",
@@ -143,8 +138,8 @@
     "        evec = [1 if i == index else 0 for i in range(basis.size)]\n",
     "        wf = wavefunction(evec, ev, basis, index).scale(scaleFactor)\n",
     "        wf2 = wavefunction(evec, ev, basis, index, squared=True).scale(scaleFactor)\n",
-    "        wf.setGraphVariables(yEqualsCutoff = ev)\n",
-    "        wf2.setGraphVariables(yEqualsCutoff = ev)\n",
+    "        wf.setGraphVariables(yEqualsCutoff = ev, color = color)\n",
+    "        wf2.setGraphVariables(yEqualsCutoff = ev, color = color)\n",
     "        \n",
     "        sol.addGraphableObject(wf)\n",
     "        sol.addGraphableObject(wf2)\n",
@@ -166,7 +161,7 @@
     "        return\n",
     "    info.value = \"Calculating solution for \" + diatomicSymbol.value + \"...\" \n",
     "    \n",
-    "    sol = buildSolution(dc)\n",
+    "    sol = buildSolution(dc, color = \"red\")\n",
     "    name = \"\"\n",
     "    #update diatomic constants\n",
     "    if(comparison.value == \"Harmonic\"):\n",
@@ -179,10 +174,10 @@
     "                name += \", \" + widget.description + \" \" + widget.value\n",
     "                \n",
     "        if(name != \"\"):\n",
-    "            sol.combineSolutions(buildSolution(dc, name), name)\n",
+    "            sol.combineSolutions(buildSolution(dc, name, color = \"blue\"), name)\n",
     "    else: \n",
     "        sol2 = schrod()\n",
-    "        sol2.load(dc[\"name\"], \"Harmonic Oscillator\", 100, \"Morse Potential\", \"RKR\", scaleFactor = scaleFactor)\n",
+    "        sol2.load(dc[\"name\"], \"Harmonic Oscillator\", 100, \"Extended Rydberg Potential\", \"RKR\", scaleFactor = scaleFactor, color = \"blue\")\n",
     "        sol.combineSolutions(sol2, \" Anharmonic\")\n",
     "    \n",
     "    endPoints = [dc[\"re\"] - 1.2, dc[\"re\"] + 1.2]\n",
@@ -292,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
