Removes Debugging Output from CHEM 340 Lab

--- a/Learning/Labs/Harmonic Oscillator Lab Questions.ipynb
+++ b/Learning/Labs/Harmonic Oscillator Lab Questions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ce227337-4378-448a-b910-ebd9123bfc07",
+   "id": "4b0558e2-403d-49cd-9241-d093e03532ef",
    "metadata": {},
    "source": [
     "<p>The following questions involve writing out equations and sketching out wavefunctions and the potential energy surface. Note, the sketches do not need to quantitatively accurate, they only need to show qualitative relationships.</p> \n",
@@ -55,13 +55,16 @@
    "execution_count": 1,
    "id": "ea25b0bb-f094-4497-86c4-8e594b918615",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "086ea8520d71494a854fff9629d03709",
+       "model_id": "e838ec07c0354e378a984b4ff48748e8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -305,14 +308,6 @@
     "\n",
     "<br>Do you feel your entire chemistry experiance can be improved through the use of more simulations such as the one presented here?</br>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "99592b0b-285d-46e8-95fb-84bf4bd288d3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
